# clean_architecture

./: README.md  pyproject.toml  setup.cfg
src/: main.py
src/domain/addresses/: create_address_use_case.py  delete_address_use_case.py  repository_base.py  search_address_by_cep_use_case.py  search_address_use_case.py  service_base.py  update_address_use_case.py  use_case_base.py
src/domain/entities/: address_schemas.py
src/infra/database/: mongodb.py
src/infra/repositories/: address_repository.py
src/infra/services/: via_cep_service.py
src/infra/web/: routers.py
